Fixed the text-alignment in the footer on all screen sizes, and in the index, and rings page. Added the spacing between the images and the text on the rings page. Also added the content at the bottom of the moons page, but haven’t fixed it up yet

--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,14 @@ html {
     html {
         font-size: 110%;
     }
+        
+    .masthead {
+        text-align: left;
+    }
+    
+    .nav-footer {
+        text-align: right;
+    }
 }
 
 @media only screen and (min-width: 90em) {
@@ -114,19 +122,26 @@ body {
     .nav li {
         display: inline-block;
     }
+    
+    .masthead {
+        text-align: center;
+    }
 }
 
 @media only screen and (min-width: 38em) {
     
-   .title {
-       text-align: left;
-       float: left;
+  .title,
+  .nav {
+    text-align: left;
    }
     
-   .nav {
-       float: left;
-       padding: 1em 0;
-   }
+    .masthead {
+        text-align: left;
+    }
+    
+    .nav-footer {
+        text-align: right;
+    }
 }
 
 
